--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <p><a href="#">Download Excursion (Coming Soon!)</a></p>
   </div>
   <div class="video">
-    <video loop width="auto" height="auto" autoplay> <source src="resources\videos\excursion.mp4" type="video/mp4"> Your browser does not support the video tag. </video>
+    <video loop width="auto" height="auto" autoplay> <source src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" type="video/mp4"> Your browser does not support the video tag. </video>
     </div>
     <div class="guide">
       <h3>Your personal travel guide</h3>
